feat: forge 支持绑定组合键并添加触发友好提示